# go-it-web-hw9-Scrapy

./: README.md  authors.json  config.ini  main.py  pyproject.toml
mongo_engine/: connect.py  main.py  models.py  seeds.py
