[tool.poetry]
name = "go-it-web-hw9-scrapy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "go_it_web_hw9_scrapy"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.8.0"
redis = "^4.5.4"
redis-lru = "^0.1.2"
mongoengine = "^0.27.0"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
